# ecpfs

./: .gitignore  Cargo.toml  README.md  build.rs  ecph5.py  main.py  pyproject.toml  test.py
ecpfs/: ECPBuilder.py  ECPIndex.py  ECPLoader.py  __init__.py  _logging.py  ecp_builder.py  ecp_index.py  ecp_node.py  utils.py
ecph5/: ECPBuilder.py
python/ecpfs/: __init__.py  _logging.py  ecp_index.py  ecp_node.py  ecp_rs_index.py  utils.py
src/: ecp_index.rs  ecp_node.rs  lib.rs  pyindex.rs  utils.rs
