[package]
name = "ecp_index_rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "AGPL"
license-file = "LICENSE"
description = ""
exclude = [
    "data/**",
    "examples/**",
    "dist/**",
    ".venv/**",
    "save/**",
    "tests/**",
    "target/**",
    "main.py",
    "test.py"
]

[lib]
name="ecp_index_rs"
crate-type = ["cdylib"]

[dependencies]
half = "2.6.0"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17", default-features = false, features = ["openblas-system"] }
num-traits = "0.2.19"
numpy = { version = "0.25.0", features = ["half"] }
ordered-float = "5.0.0"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
zarrs = "0.20.0"

[profile.release]
lto = "thin"
codegen-units = 4