[tool.poetry]
name = "ecpfs"
version = "0.9.0"
description = ""
authors = ["Omar Shahbaz Khan <omshkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
numpy = "^2.0.0"
click = "^8.1.7"
h5py = "^3.11.0"
ipython = "^8.25.0"
loguru = "^0.7.3"
typer = "^0.15.2"
tqdm = "^4.67.1"
black = "^24.10.0"
scikit-learn = "^1.6.0"
dill = "^0.3.9"
pathos = "^0.3.3"
zarr = "^3.0.5"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
